--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -163,7 +163,8 @@ sub main () { #{{{
 	}
 
 	if ($config{dumpsetup}) {
-		$config{srdir}=$config{destdir}="";
+		$config{srcdir}="" if ! defined $config{srcdir};
+		$config{destdir}="" if ! defined $config{destdir};
 		$config{syslog}=1 if $config{setupsyslog};
 		require IkiWiki::Setup;
 		IkiWiki::Setup::dump($config{dumpsetup});
