--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,8 @@ binary-indep: build
 	$(MAKE) pure_install INSTALLDIRS=vendor \
 		PREFIX=$(shell pwd)/debian/ikiwiki/$(shell perl -MConfig -e 'print $$Config{prefix}')
 	dh_installdocs html
+	dh_link usr/share/ikiwiki/basewiki \
+		usr/share/doc/ikiwiki/examples/basewiki
 	dh_installman ikiwiki.man
 	dh_installchangelogs
 	dh_compress
