--- a/debian/control
+++ b/debian/control
@@ -18,4 +18,4 @@ Description: a wiki compiler
  .
  ikiwiki implements most of the other standard features of a wiki, including
  web-based page editing, user registration and logins, and a RecentChanges
- page.
+ page. It also supports generating weblogs.
