--- a/debian/rules
+++ b/debian/rules
@@ -24,11 +24,12 @@ binary-indep: build
 	$(MAKE) pure_install INSTALLDIRS=vendor \
 		PREFIX=$(shell pwd)/debian/ikiwiki/$(shell perl -MConfig -e 'print $$Config{prefix}')
 	dh_installdocs html
+	dh_link usr/share/common-licenses/GPL usr/share/doc/ikiwiki/html/GPL
 	dh_link usr/share/ikiwiki/basewiki \
 		usr/share/doc/ikiwiki/examples/basewiki
 	dh_installman ikiwiki.man
 	dh_installchangelogs
-	dh_compress
+	dh_compress -X html
 	dh_fixperms
 	dh_perl
 	dh_installdeb
