--- a/debian/rules
+++ b/debian/rules
@@ -38,5 +38,9 @@ binary-indep: build
 	dh_md5sums
 	dh_builddeb
 
+# Not intended for use by anyone except the author.
+announcedir:
+	@echo ${HOME}/src/ikiwiki/news
+
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary
