--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: ikiwiki
 Section: web
 Priority: optional
-Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.9.0), markdown, libhtml-template-perl, libhtml-scrubber-perl
+Build-Depends: debhelper (>= 5)
+Build-Depends-Indep: dpkg-dev (>= 1.9.0), markdown, libhtml-template-perl, libhtml-scrubber-perl
 Maintainer: Joey Hess <joeyh@debian.org>
 Standards-Version: 3.6.2
 
@@ -16,6 +17,9 @@ Description: a wiki compiler
  own means of storing page history or its own markup language. Instead it
  uses subversion and markdown.
  .
- ikiwiki implements most of the other standard features of a wiki, including
- web-based page editing, user registration and logins, and a RecentChanges
- page. It also supports generating weblogs.
+ ikiwiki implements all of the other standard features of a wiki, including
+ web-based page editing, user registration and logins, a RecentChanges
+ page, BackLinks, search, Discussion pages, smart merging and conflict
+ resolution, page locking, and commit emails.
+ .
+ It also supports generating RSS feeds and blogging.
