--- a/templates/estseek.conf
+++ b/templates/estseek.conf
@@ -17,5 +17,9 @@ scancheck: false
 smplphrase: true
 candetail: true
 smlrvnum: 0
+smlrtune: 16 1024 4096
 clipview: 2
+relkeynum: 0
 spcache:
+wildmax: 256
+qxpndcmd:
