--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: ikiwiki
 Section: web
 Priority: optional
-Build-Depends: debhelper (>= 5)
-Build-Depends-Indep: perl, dpkg-dev (>= 1.9.0), markdown, libhtml-template-perl, libhtml-scrubber-perl, wdg-html-validator
+Build-Depends: perl, debhelper (>= 5)
+Build-Depends-Indep: dpkg-dev (>= 1.9.0), markdown, libhtml-template-perl, libhtml-scrubber-perl, wdg-html-validator
 Maintainer: Joey Hess <joeyh@debian.org>
 Standards-Version: 3.7.2
 
