* Build-depend on libtext-wikiformat-perl, so that the syntax check of    the wikiformat plugin works. Thanks, Emanuele Aina.  * Patch from Alessandro Dotti Contra to clean up backlinks and navbar    display, running them through pagetitle. This removes ugly underscores and    other gunk from the display, much nicer. You may want to rebuild your wiki    when upgrading to get the cleanup globally.

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ikiwiki
 Section: web
 Priority: optional
 Build-Depends: perl, debhelper (>= 5)
-Build-Depends-Indep: dpkg-dev (>= 1.9.0), markdown, libhtml-template-perl, libhtml-scrubber-perl, wdg-html-validator
+Build-Depends-Indep: dpkg-dev (>= 1.9.0), markdown, libhtml-template-perl, libhtml-scrubber-perl, wdg-html-validator, libtext-wikiformat-perl
 Maintainer: Joey Hess <joeyh@debian.org>
 Standards-Version: 3.7.2
 
