--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 build: build-stamp
 build-stamp:
 	dh_testdir
-	perl Makefile.PL
+	perl Makefile.PL PREFIX=/usr
 	$(MAKE)
 	$(MAKE) test
 	touch build-stamp
