* Add support for mercurial, contributed by Emanuele Aina.

--- a/debian/control
+++ b/debian/control
@@ -9,13 +9,13 @@ Standards-Version: 3.7.2
 Package: ikiwiki
 Architecture: all
 Depends: ${perl:Depends}, libxml-simple-perl, markdown, libtimedate-perl, libhtml-template-perl, libhtml-scrubber-perl, libcgi-formbuilder-perl (>= 3.02.02), libtime-duration-perl, libcgi-session-perl, libmail-sendmail-perl, gcc | c-compiler, libc6-dev | libc-dev, libhtml-parser-perl
-Recommends: subversion | git-core | tla, hyperestraier
+Recommends: subversion | git-core | tla | mercurual, hyperestraier
 Suggests: viewcvs, librpc-xml-perl, libtext-wikiformat-perl, python-docutils, polygen, tidy, libxml-feed-perl, libmailtools-perl
 Description: a wiki compiler
  ikiwiki converts a directory full of wiki pages into html pages suitable
  for publishing on a website. Unlike many wikis, ikiwiki does not have its
- own means of storing page history. Instead it can use Subversion (or
- Git or tla).
+ own means of storing page history, and instead uses a revision control
+ system (such as  Subversion).
  .
  ikiwiki implements all of the other standard features of a wiki, including
  web-based page editing, user registration and logins, a RecentChanges
