--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Suggests: viewcvs, librpc-xml-perl, libtext-wikiformat-perl, python-docutils, po
 Description: a wiki compiler
  ikiwiki converts a directory full of wiki pages into html pages suitable
  for publishing on a website. Unlike many wikis, ikiwiki does not have its
- own means of storing page history, and instead uses a revision control
+ own ad-hoc means of storing page history, and instead uses a revision control
  system such as Subversion.
  .
  ikiwiki implements all of the other standard features of a wiki, including
