* Work on firming up the plugin interface:   - Plugins should not need to load IkiWiki::Render to get commonly     used functions, so moved some functions from there to IkiWiki.   - Picked out the set of functions and variables that most plugins     use, documented them, and made IkiWiki export them by default,     like a proper perl module should.   - Use the other functions at your own risk.   - This is not quite complete, I still have to decide whether to     export some other things. * Changed all plugins included in ikiwiki to not use "IkiWiki::" when   referring to stuff now exported by the IkiWiki module. * Anyone with a third-party ikiwiki plugin is strongly enrouraged   to make like changes to it and avoid use of non-exported symboles from   "IkiWiki::". * Link debian/changelog and debian/news to NEWS and CHANGELOG. * Support hyperestradier version 1.4.2, which adds a new required phraseform   setting.

--- a/templates/estseek.conf
+++ b/templates/estseek.conf
@@ -15,6 +15,7 @@ condgstep: 2
 dotfidf: true
 scancheck: false
 smplphrase: true
+phraseform: 2
 candetail: true
 smlrvnum: 0
 smlrtune: 16 1024 4096
