--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Build-Depends: perl, debhelper (>= 5)
 Build-Depends-Indep: dpkg-dev (>= 1.9.0), markdown, libhtml-template-perl, libhtml-scrubber-perl, wdg-html-validator, libtext-wikiformat-perl, libhtml-parser-perl
 Maintainer: Joey Hess <joeyh@debian.org>
 Standards-Version: 3.7.2
+XS-Vcs-Svn: svn://svn.kitenet.net/ikiwiki/trunk
 
 Package: ikiwiki
 Architecture: all
