* Work with hyperestraier 1.4.9.

--- a/templates/estseek.conf
+++ b/templates/estseek.conf
@@ -2,6 +2,7 @@ indexname: <TMPL_VAR INDEX>
 tmplfile: <TMPL_VAR TMPLFILE>
 topfile: /dev/null
 logfile:
+logformat: 
 replace: ^file://<TMPL_VAR DESTDIR>{{!}}<TMPL_VAR URL>
 showreal: false
 perpage: 10,20,30,40,50,100
@@ -24,3 +25,7 @@ relkeynum: 0
 spcache:
 wildmax: 256
 qxpndcmd:
+helpfile: estseek.help
+deftitle: 
+attrwidth: 80
+dispproxy: 
