* Rename ikiwiki.pl so MakeMaker doesn't see it, and install it. * Add some code to the build system that tries to determine if the   lib installation directory is in @INC. If it's not, munge ikiwiki   to hardcode the path to the lib directory. This should allow installing   ikiwiki in nonstandard locations, including home directories, by just   setting PREFIX at build time. * Fix nested examples directory in deb.

--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -6,7 +6,7 @@ package IkiWiki;
 
 use warnings;
 use strict;
-use lib '.'; # For use without installation, removed by Makefile.
+use lib '.'; # For use in nonstandard directory, munged by Makefile.
 use IkiWiki;
 
 sub usage () { #{{{
