--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -32,8 +32,6 @@ sub getconfig () { #{{{
 			"rcs=s" => \$config{rcs},
 			"no-rcs" => sub { $config{rcs}="" },
 			"anonok!" => \$config{anonok},
-			"rss!" => \$config{rss},
-			"atom!" => \$config{atom},
 			"cgi!" => \$config{cgi},
 			"discussion!" => \$config{discussion},
 			"w3mmode!" => \$config{w3mmode},
@@ -49,7 +47,7 @@ sub getconfig () { #{{{
 			"sslcookie!" => \$config{sslcookie},
 			"httpauth!" => \$config{httpauth},
 			"exclude=s@" => sub {
-				$config{wiki_file_prune_regexp}=qr/$config{wiki_file_prune_regexp}|$_[1]/;
+				push @{$config{wiki_file_prune_regexp}}, $_[1];
 			},
 			"adminuser=s@" => sub {
 				push @{$config{adminuser}}, $_[1]
