--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -10,7 +10,7 @@ use lib '.'; # For use in nonstandard directory, munged by Makefile.
 use IkiWiki;
 
 sub usage () { #{{{
-	die "usage: ikiwiki [options] source dest\n";
+	die gettext("usage: ikiwiki [options] source dest"), "\n";
 } #}}}
 
 sub getconfig () { #{{{
