* Include the pot file in the source tarball. Closes: #405890

--- a/po/Makefile
+++ b/po/Makefile
@@ -19,7 +19,7 @@ ikiwiki.pot: $(POTFILES)
 	xgettext $(POTFILES) -o ikiwiki.pot -Lperl --add-comments=translators
 
 clean:
-	rm -f ikiwiki.pot $(MOFILES) messages messages.mo
+	rm -f $(MOFILES) messages messages.mo
 
 %.mo: %.po
 	msgfmt -o $@ $<
