* Smarter detection of no-op changes to po files.

--- a/po/Makefile
+++ b/po/Makefile
@@ -29,9 +29,9 @@ clean:
 %.po: ikiwiki.pot
 	@echo -n "Merging ikiwiki.pot and $@"
 	@msgmerge $@ ikiwiki.pot -o $@.new 2>&1
-# Typically all that changes was a date. I'd prefer not to commit such
-# changes, so detect and ignore them.
-	@if [ "`diff $@ $@.new | grep '[<>]' | wc -l`" -ne 2 ]; then \
+# Typically all that changes was a date or line number. I'd prefer not to
+# commit such changes, so detect and ignore them.
+	@if [ "`diff $@ $@.new | grep '[<>]' | grep -v '[<>] #:' | wc -l`" -ne 2 ]; then \
 		mv -f $@.new $@; \
 	else \
 		rm -f $@.new; \
