* Since the CGI had to drop the wiki lock to avoid deadlocking the   commit hook, it was possible for one CGI to race another one and "win"   the commit of both their files. This race has been fixed by adding a new   commitlock, which when locked by the CGI, disables the commit hook   (except for commit mails). The CGI then takes care of the updates the   commit hook would have done.

--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -117,6 +117,12 @@ sub main () { #{{{
 		require IkiWiki::Render;
 		commandline_render();
 	}
+	elsif ($config{post_commit} && ! commit_hook_enabled()) {
+		if ($config{notify}) {
+			loadindex();
+			rcs_notify();
+		}
+	}
 	else {
 		lockwiki();
 		loadindex();
