--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Description: a wiki compiler
  ikiwiki converts a directory full of wiki pages into html pages suitable
  for publishing on a website. Unlike many wikis, ikiwiki does not have its
  own ad-hoc means of storing page history, and instead uses a revision control
- system such as Subversion.
+ system such as Subversion or Git.
  .
  ikiwiki implements all of the other standard features of a wiki, including
  web-based page editing, user registration and logins, a RecentChanges
