* Add --post-commit option, which allows for the case of a split web server   and RCS server (or a push mirror). With this the RCS server can have a   real post-commit hook that sshs back to the web server, and runs ikiwiki   in post-commit mode to update the wiki.

--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -25,6 +25,7 @@ sub getconfig () { #{{{
 			"syslog!" => \$config{syslog},
 			"rebuild!" => \$config{rebuild},
 			"refresh!" => \$config{refresh},
+			"post-commit" => \$config{post_commit},
 			"render=s" => \$config{render},
 			"wrappers!" => \$config{wrappers},
 			"getctime" => \$config{getctime},
