* Hide excess backlinks and expand using CSS trick; control quantiy via   the numbacklinks setting.

--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -30,6 +30,7 @@ sub getconfig () { #{{{
 			"wrappers!" => \$config{wrappers},
 			"getctime" => \$config{getctime},
 			"wrappermode=i" => \$config{wrappermode},
+			"numbacklinks=i" => \$config{numbacklinks},
 			"rcs=s" => \$config{rcs},
 			"no-rcs" => sub { $config{rcs}="" },
 			"cgi!" => \$config{cgi},
