* Finally apply the index.html patch, with thanks to everyone who worked   on and supported creating it (especially Tumov). This adds a "usedirs"   option that makes ikiwiki use foo/index.html instead of foo.html as   output page names. It is not yet enabled by default.

--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -28,6 +28,7 @@ sub getconfig () { #{{{
 			"post-commit" => \$config{post_commit},
 			"render=s" => \$config{render},
 			"wrappers!" => \$config{wrappers},
+			"usedirs!" => \$config{usedirs},
 			"getctime" => \$config{getctime},
 			"wrappermode=i" => \$config{wrappermode},
 			"numbacklinks=i" => \$config{numbacklinks},
