* Fix a bug in the img plugin that caused thumbnailed files to not be * Make the OpenID library a reccommendation of the Debian package, rather   than just a suggests, since OpenID is enabled by default.

--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ XS-Vcs-Svn: svn://svn.kitenet.net/ikiwiki/trunk
 Package: ikiwiki
 Architecture: all
 Depends: ${perl:Depends}, libxml-simple-perl, markdown, libtimedate-perl, libhtml-template-perl, libhtml-scrubber-perl, libcgi-formbuilder-perl (>= 3.02.02), libtime-duration-perl, libcgi-session-perl (>= 4.14-1), libmail-sendmail-perl, gcc | c-compiler, libc6-dev | libc-dev, libhtml-parser-perl, liburi-perl
-Recommends: subversion | git-core | tla | mercurial, hyperestraier
-Suggests: viewvc | viewcvs, librpc-xml-perl, libtext-wikiformat-perl, python-docutils, polygen, tidy, libxml-feed-perl, libmailtools-perl, perlmagick, libfile-mimeinfo-perl, libnet-openid-consumer-perl, libcrypt-ssleay-perl, liblocale-gettext-perl (>= 1.05-1)
+Recommends: subversion | git-core | tla | mercurial, hyperestraier, libnet-openid-consumer-perl
+Suggests: viewvc | viewcvs, librpc-xml-perl, libtext-wikiformat-perl, python-docutils, polygen, tidy, libxml-feed-perl, libmailtools-perl, perlmagick, libfile-mimeinfo-perl, libcrypt-ssleay-perl, liblocale-gettext-perl (>= 1.05-1)
 Description: a wiki compiler
  ikiwiki converts a directory full of wiki pages into html pages suitable
  for publishing on a website. Unlike many wikis, ikiwiki does not have its
