--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Depends: ${perl:Depends}, libxml-simple-perl, markdown, libtimedate-perl, libhtm
 Recommends: subversion | git-core | tla | mercurial, hyperestraier, libnet-openid-consumer-perl
 Suggests: viewvc | viewcvs, librpc-xml-perl, libtext-wikiformat-perl, python-docutils, polygen, tidy, libxml-feed-perl, libmailtools-perl, perlmagick, libfile-mimeinfo-perl, libcrypt-ssleay-perl, liblocale-gettext-perl (>= 1.05-1)
 Description: a wiki compiler
- ikiwiki converts a directory full of wiki pages into html pages suitable
+ ikiwiki converts a directory full of wiki pages into HTML pages suitable
  for publishing on a website. Unlike many wikis, ikiwiki does not have its
  own ad-hoc means of storing page history, and instead uses a revision control
  system such as Subversion or Git.
@@ -23,5 +23,7 @@ Description: a wiki compiler
  page, BackLinks, search, Discussion pages, tags, smart merging and conflict
  resolution, page locking, and commit emails.
  .
- It also supports generating RSS feeds and blogging, and a plugin system
- allows many other features to be added.
+ ikiwiki also supports generating news feeds (RSS and Atom) and blogging.
+ ikiwiki provides a plugin system which allows many other features to be
+ added. Some of the plugins have additional dependencies, found among the
+ Recommends and Suggests of this package.
