* Add Homepage field.

--- a/debian/control
+++ b/debian/control
@@ -27,3 +27,5 @@ Description: a wiki compiler
  ikiwiki provides a plugin system which allows many other features to be
  added. Some of the plugins have additional dependencies, found among the
  Recommends and Suggests of this package.
+ .
+  Homepage: http://ikiwiki.info/
