--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends-Indep: dpkg-dev (>= 1.9.0), libxml-simple-perl, markdown, libtimed
 Maintainer: Joey Hess <joeyh@debian.org>
 Standards-Version: 3.7.2
 XS-Vcs-Svn: svn://svn.kitenet.net/ikiwiki/trunk
+XS-Vcs-Browser: http://ikiwiki.info/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki
 
 Package: ikiwiki
 Architecture: all
