--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -49,6 +49,7 @@ sub getconfig () { #{{{
 			"sslcookie!" => \$config{sslcookie},
 			"httpauth!" => \$config{httpauth},
 			"userdir=s" => \$config{userdir},
+			"htmlext=s" => \$config{htmlext},
 			"exclude=s@" => sub {
 				push @{$config{wiki_file_prune_regexps}}, $_[1];
 			},
