* Add a libdir config option to let ikiwiki load perl modules, including   plugins, from a user-configurable directory.

--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -50,6 +50,7 @@ sub getconfig () { #{{{
 			"httpauth!" => \$config{httpauth},
 			"userdir=s" => \$config{userdir},
 			"htmlext=s" => \$config{htmlext},
+			"libdir" => \$config{libdir},
 			"exclude=s@" => sub {
 				push @{$config{wiki_file_prune_regexps}}, $_[1];
 			},
