* Fix --libdir to work at the command line. * Plugins can now be written as standalone external programs, which can   be written in any language that can do XML::RPC.

--- a/ikiwiki.in
+++ b/ikiwiki.in
@@ -50,7 +50,7 @@ sub getconfig () { #{{{
 			"httpauth!" => \$config{httpauth},
 			"userdir=s" => \$config{userdir},
 			"htmlext=s" => \$config{htmlext},
-			"libdir" => \$config{libdir},
+			"libdir=s" => \$config{libdir},
 			"exclude=s@" => sub {
 				push @{$config{wiki_file_prune_regexps}}, $_[1];
 			},
