Vcs- fields now official

--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Maintainer: Joey Hess <joeyh@debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>, Josh Triplett <josh@freedesktop.org>
 Standards-Version: 3.7.2
 Homepage: http://ikiwiki.info/
-XS-Vcs-Svn: svn://svn.kitenet.net/ikiwiki/trunk
-XS-Vcs-Browser: http://ikiwiki.info/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki
+Vcs-Svn: svn://svn.kitenet.net/ikiwiki/trunk
+Vcs-Browser: http://ikiwiki.info/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki
 
 Package: ikiwiki
 Architecture: all
