ikiwiki is now stored in a git repository
Note that all the sha1s did change from those in the earlier ikiwiki git
repos gated from svn. Thank you, git-svnimport, for the pain.

--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Maintainer: Joey Hess <joeyh@debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>, Josh Triplett <josh@freedesktop.org>
 Standards-Version: 3.7.2
 Homepage: http://ikiwiki.info/
-Vcs-Svn: svn://svn.kitenet.net/ikiwiki/trunk
-Vcs-Browser: http://ikiwiki.info/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki
+Vcs-Git: git://git.ikiwiki.info/
+Vcs-Browser: http://git.ikiwiki.info/?p=ikiwiki
 
 Package: ikiwiki
 Architecture: all
