* Work around perl taint checking bug #411786, where perl sometimes randomly   sets the taint flag on untainted variables, by disabling taint checking   in the deb. This sucks.

--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,8 @@ build: build-stamp
 build-stamp:
 	dh_testdir
 	perl Makefile.PL PREFIX=/usr INSTALLDIRS=vendor
-	$(MAKE)
+	# taint checking disabled due to perl bug #411786
+	$(MAKE) NOTAINT=1
 	$(MAKE) test
 	touch build-stamp
 
